feat: added users - login and register views

--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,8 @@
 <Application x:Class="HabitTracker.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HabitTracker">
+             xmlns:local="clr-namespace:HabitTracker"
+             ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
          
     </Application.Resources>
